refactor: Update authentication and teaching activity components